Refactoring the project to make kin-sdk and kin-base pure vanilla java/kotlin.
A new module, kin-android, now contains all android platform specific code.

Clients who use this sdk for android should only pull in kin-android module.
Clients looking for a java only implementation should only include kin-sdk.

Summary of modifications:
- changed nullability annotations from support lib version to jsr305
compliant variant
- changed android platform URI to vanilla java.net.URI
- modified KinClient interface to accomodate removal of Context
(only storage to shared prefs required it) and addition of main thread
handler
- injected storage via new KinStorageFactory interface (see
KinStorageFactoryImpl for android sharedPrefs impl)
- copied kin-utils lib temporarily locally in kin-sdk and made it
vanilla java/kotlin (TODO: another PR will follow with that change)
- kin-utils copy now takes in a MainHandler who's responsibility is to post
Runnables to the main thread.

All Tests including integration pass.