@@ -1,11 +1,14 @@
 package kin.base.federation;
 
-import android.net.Uri;
 import com.google.gson.reflect.TypeToken;
 import com.moandjiezana.toml.Toml;
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
+
+import okhttp3.HttpUrl;
 import okhttp3.OkHttpClient;
 import okhttp3.Request;
 import okhttp3.Response;
@@ -24,7 +27,7 @@ import kin.base.responses.HttpResponseException;
  * @see <a href="https://www.stellar.org/developers/learn/concepts/federation.html" target="_blank">Federation docs</a>
  */
 public class FederationServer {
-  private final URI serverUri;
+  private final URL serverUri;
   private final String domain;
   private static OkHttpClient httpClient = new OkHttpClient();
 
@@ -35,9 +38,9 @@ public class FederationServer {
    * @param domain    Domain name this federation server is responsible for
    * @throws FederationServerInvalidException Federation server is invalid (malformed URL, not HTTPS, etc.)
    */
-  public FederationServer(URI serverUri, String domain) {
+  public FederationServer(URL serverUri, String domain) {
     this.serverUri = serverUri;
-    if (this.serverUri.getScheme() != "https") {
+    if (!this.serverUri.getProtocol().equals("https")) {
       throw new FederationServerInvalidException();
     }
     this.domain = domain;
@@ -52,8 +55,8 @@ public class FederationServer {
    */
   public FederationServer(String serverUri, String domain) {
     try {
-      this.serverUri = new URI(serverUri);
-    } catch (URISyntaxException e) {
+      this.serverUri = new URL(serverUri);
+    } catch (MalformedURLException e) {
       throw new FederationServerInvalidException();
     }
     this.domain = domain;
@@ -125,11 +128,10 @@ public class FederationServer {
       throw new MalformedAddressException();
     }
 
-    Uri uri = Uri.parse(serverUri.toString())
-        .buildUpon()
-        .appendQueryParameter("type", "name")
-        .appendQueryParameter("q", address)
-        .build();
+    URL uri = HttpUrl.parse(serverUri.toString()).newBuilder()
+        .addQueryParameter("type", "name")
+        .addQueryParameter("q", address)
+        .build().url();
 
     TypeToken type = new TypeToken<FederationResponse>() {
     };
@@ -160,7 +162,7 @@ public class FederationServer {
    *
    * @return URI
    */
-  public URI getServerUri() {
+  public URL getServerUri() {
     return serverUri;
   }
 
